Create thai-cocunt-soup.html, add <body> index
Index.html was missing a <body> - this was added.
Thai-coconut-soup.html was created with proper boilerplate including
a <body>.

--- a/pages/thai-coconut-soup.html
+++ b/pages/thai-coconut-soup.html
@@ -2,12 +2,11 @@
 
 <html>
     <head>
-        <title>Homepage</title>
         <meta charset="UTF-8">
+        <title>Thai Coconut Soup</title>
     </head>
-
+    
     <body>
-        <h1>Homepage</h1>
-        <a href="pages/about.html">click me</a>
+        
     </body>
 </html>
