--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
     <body>
         <h1>Homepage</h1>
-        <a href="pages/about.html">click me</a>
+        <a href="recipes/thai-coconut-soup.html">Thai Chicken Cocnut Soup</a>
     </body>
 </html>
