Add img to first recipe and typo correction
Image placed in images directory. Index had a typo in the link text:
"Cocnut" --> "coconut".

--- a/recipes/thai-coconut-soup.html
+++ b/recipes/thai-coconut-soup.html
@@ -7,6 +7,7 @@
     </head>
     
     <body>
-        <h1>Thai Chicken Coconut Soup</h1>
+        <h1>Thai Chicken Coconut Soup</
+        <img src="images/tccs.jpg" alt="Picture of fresh bowl of thai chicken coconut soup.">
     </body>
 </html>
