Add contents to thai-coconut-soup.html

--- a/recipes/thai-coconut-soup.html
+++ b/recipes/thai-coconut-soup.html
@@ -9,5 +9,38 @@
     <body>
         <h1>Thai Chicken Coconut Soup</
         <img src="images/tccs.jpg" alt="Picture of fresh bowl of thai chicken coconut soup.">
+    
+        <p>This is a very simple recipe that's very delicious. That means high payout for little effort! The most important flavors are the ginger and the lemongrass, along with the garnishes you choose. Be careful when cooking the chicken because if it gets cooked too long, the chicken will become chewy, from my experience.</p>
+
+        <p>It takes roughly 15 minutes to cook everything and requires minimal cooking skills. It's a small amount of food, expect to serve 3-4 people, or 1 over the course of 2 or 3 days.</p>
+
+        <h2><em>Ingredients:</em></h2>
+        <ul>
+            <li>Boned skinned chicken breast or thighs, 1 lb.</li>
+            <li>Thai coconut milk, 1 can (14 oz.)</li>
+            <li>Reduced-sodium chicken broth, 1 can (14oz.)</li>
+            <li>Sugar, 1 tsp</li>
+            <li>Lime juice, 1 Tbsp</li>
+            <li>Thai or Vietnamese fish sauce, 1 Tbsp</li>
+            <li>Thai chili paste, 1 tsp</li>
+            <li>Fresh lemongrass, 1 stalk</li>
+            <li>Basil leaves to garnish</li>
+            <li>Cilantro to garnish</li>
+        </ul>
+
+        <h2><em>Directions:</em></h2>
+        <ol>
+            <li>1.	In a medium pot, combine coconut milk, chicken broth, and 6 quarter-size slices fresh ginger.</li>
+            <li>Cut lemongrassinto 1-inch pieces and add to pot</li>
+            <li>Bring to a boil over high heat.</li>
+            <li>Add lime juice, fish sauce, sugar, and Thai chili paste.</li>
+            <li>Add chicken, cut into 1-inch pieces (bite sized), and reduce heat to simmer. Wait until chicken is firm and opaque, 5-10 minutes.</li>
+            <li>Garnish each serving with basil and cilantro.</li>
+            <li>Discard lemongrass.</li>
+        </ol>
+
+        <p>1 cup serving = 200 calories.</p>
+
+    
     </body>
 </html>
