Fix typo to end first header and img src typo
The first header was missing a few characters from </h1>, thus all of
the description paragraph was part of the header. Additionally, the src
for the image was corrected from ".jpg" to ".jpeg"

--- a/recipes/thai-coconut-soup.html
+++ b/recipes/thai-coconut-soup.html
@@ -7,8 +7,8 @@
     </head>
     
     <body>
-        <h1>Thai Chicken Coconut Soup</
-        <img src="images/tccs.jpg" alt="Picture of fresh bowl of thai chicken coconut soup.">
+        <h1>Thai Chicken Coconut Soup</h1>
+        <img src="images/tccs.jpeg" alt="Picture of fresh bowl of thai chicken coconut soup.">
     
         <p>This is a very simple recipe that's very delicious. That means high payout for little effort! The most important flavors are the ginger and the lemongrass, along with the garnishes you choose. Be careful when cooking the chicken because if it gets cooked too long, the chicken will become chewy, from my experience.</p>
 
