Change wording in paragraph

--- a/recipes/thai-coconut-soup.html
+++ b/recipes/thai-coconut-soup.html
@@ -12,7 +12,7 @@
     
         <p>This is a very simple recipe that's very delicious. That means high payout for little effort! The most important flavors are the ginger and the lemongrass, along with the garnishes you choose. Be careful when cooking the chicken because if it gets cooked too long, the chicken will become chewy, from my experience.</p>
 
-        <p>It takes roughly 15 minutes to cook everything and requires minimal cooking skills. It's a small amount of food, expect to serve 3-4 people, or 1 over the course of 2 or 3 days.</p>
+        <p>It takes roughly 15 minutes to cook everything and requires minimal skills. It's a small amount of food, expect to serve 3-4 people, or 1 over the course of 2 or 3 days.</p>
 
         <h2><em>Ingredients:</em></h2>
         <ul>
