Creat Oven-roasted Vegetables.html, edit typos
Involves finding the new image for the recipe placed in ./images/. Also
realized that I may have left some typos in recipe abbreviations in
thai-coconut-soup.html. See below "ingredients:" in
thai-coconut-soup.html to check.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 
 <html>
     <head>
-        <title>Homepage</title>
+        <title>Harrison's Cookbook</title>
         <meta charset="UTF-8">
     </head>
 
     <body>
-        <h1>Homepage</h1>
-        <a href="recipes/thai-coconut-soup.html">Thai Chicken Coconut Soup</a>
+        <h1><em>Uploaded Recipes</em></h1>
+        
+        <p>Here are some favorite recipes from Harrison's cookbook. Please enjoy! <br>They're marked with "*" based on how much time you can anticipate spending to making them.</p>
+        <ul>
+            <li><a href="recipes/thai-coconut-soup.html">Thai Chicken Coconut Soup*</a></li>
+            <li><a href="recipes/oven-roasted-vegetables.html">Oven-roasted Vegetables***</li>
+        </ul>
     </body>
 </html>
